--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -20,12 +20,18 @@
     <Button
         android:layout_width="189dp"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="70dp"
+        android:layout_marginTop="50dp"
         android:text="Student Login" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="70dp"
         android:text="Faculty Login" />
 
 </LinearLayout>
