--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -18,7 +18,8 @@
         android:textSize="20sp" />
 
     <Button
-        android:layout_width="189dp"
+        android:id="@+id/stdlogin"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginHorizontal="70dp"
@@ -26,8 +27,8 @@
         android:text="Student Login" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="190dp"
+        android:id="@+id/facbtn"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginTop="50dp"
