--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -21,18 +21,18 @@
         android:id="@+id/stdlogin"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginHorizontal="70dp"
         android:layout_marginTop="50dp"
-        android:text="Student Login" />
+        android:text="Student Login"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/facbtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="70dp"
-        android:text="Faculty Login" />
+        android:layout_marginTop="50dp"
+        android:text="Faculty Login"
+        android:textAlignment="center" />
 
 </LinearLayout>
