updated main_Activity,login and reg_main activities

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="82dp" />
+        android:layout_margin="150dp"
+        android:padding="10dp"
+        android:textColor="#000000"
+
+        android:textAlignment="center"
+        android:textSize="20dp"
+        />
+
+
+        />
 
     <Button
         android:id="@+id/regbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight=
+        android:layout_marginLeft="138dp"
+        android:layout_marginTop="-120dp"
+        android:includeFontPadding="true"
+        android:padding="10dp"
+        android:textColor="#000000"
+
+        android:textAlignment="center"
+        android:textSize="20dp"
         android:text="Register"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="212dp" />
+         />
+    />
 </LinearLayout>
