--- a/app/src/main/res/layout/activity_register_main.xml
+++ b/app/src/main/res/layout/activity_register_main.xml
@@ -4,19 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.RegisterMainActivity">
 
-    <Button
-        android:id="@+id/regstud"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Student Register" />
+    <TextView
+        android:id="@+id/regtitle"
+        android:layout_width="292dp"
+        android:layout_height="47dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="20dp"
+        android:text="Student/Faculty Registration "
+        android:textAlignment="center"
+        android:textSize="20dp"
+
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/regfac"
-        android:layout_width="wrap_content"
+        android:id="@+id/stdbtn"
+        android:layout_width="243dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Faculty Register" />
+
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="80dp"
+        android:text="Student" />
+
+    <Button
+        android:id="@+id/facbtn"
+        android:layout_width="247dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="80dp"
+        android:text="Faculty" />
+
 </LinearLayout>
