--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -11,28 +11,43 @@
         android:id="@+id/logintxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="19dp"
         android:padding="10dp"
-        android:text="LOGIN"
+        android:text="LOGIN INTO YOUR PORTAL"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="#072391"/>
+
+    <EditText
+        android:id="@+id/usn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_margin="20dp"
+        android:hint="Enter Your Username "
+
+
+    <EditText
+        android:id="@+id/pw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Enter Your Password"
+        android:layout_margin="20dp"
+        />
 
     <Button
-        android:id="@+id/stdlogin"
-        android:layout_width="200dp"
+        android:id="@+id/plogin"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="70dp"
-        android:layout_marginTop="50dp"
-        android:text="Student Login"
-        android:textAlignment="center" />
+        android:text="SUBMIT"
+        android:layout_margin="40dp"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textColor="#000000"/>
 
-    <Button
-        android:id="@+id/facbtn"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="70dp"
-        android:layout_marginTop="50dp"
-        android:text="Faculty Login"
-        android:textAlignment="center" />
 
 </LinearLayout>
