--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -1,9 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.saipr.final_year_proj.FacultyRegisterActivity">
+    android:orientation="vertical"
+    tools:context="com.example.saipr.final_year_proj.LoginMainActivity">
+    <TextView
+        android:id="@+id/registertxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:text="REGISTER"
+       android:textColor="#000"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+    <EditText
+        android:id="@+id/nametxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"
+        />
+    <EditText
+        android:id="@+id/usntxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="USN"
+        android:inputType="number"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/qualtxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Qualification"
+        android:inputType="number"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"/>
+    <EditText
+        android:id="@+id/phonetxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textColor="#828383"
+        android:inputType="phone"
+        android:text="Phone"
+        android:layout_marginLeft="60dp"/>
+
+    <EditText
+        android:id="@+id/emailtxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textColor="#828383"
+        android:inputType="textEmailAddress"
+        android:text="email"
+        android:layout_marginLeft="60dp"/>
+
+    <EditText
+        android:id="@+id/addresstxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Address"
+        android:textColor="#828383"
+        android:inputType="textPostalAddress"
+        android:layout_marginLeft="60dp"/>
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="10dp"
+        android:text="SUBMIT" />
+
+</LinearLayout>
