--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -7,4 +7,101 @@
     android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.StudentRegisterActivity">
 
+    <TextView
+        android:id="@+id/registertxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:text="REGISTER"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="20sp" />
+
+
+    <EditText
+        android:id="@+id/nametxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"
+        />
+
+
+    <EditText
+        android:id="@+id/datetxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="DOB"
+        android:textColor="#828383"
+        android:inputType="date"
+        android:layout_marginLeft="60dp"/>
+
+
+    <EditText
+        android:id="@+id/usntxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="USN"
+        android:textColor="#828383"
+        android:inputType="number"
+        android:layout_marginLeft="60dp"/>
+
+
+
+    <EditText
+        android:id="@+id/semtxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Sem"
+        android:inputType="number"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"/>
+
+
+    <EditText
+        android:id="@+id/phonetxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="phone"
+        android:textColor="#828383"
+        android:text="Phone"
+        android:layout_marginLeft="60dp"/>
+
+    <EditText
+        android:id="@+id/emailtxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="email"
+        android:textColor="#828383"
+        android:layout_marginLeft="60dp"/>
+
+    <EditText
+        android:id="@+id/addresstxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Address"
+        android:textColor="#828383"
+        android:inputType="textPostalAddress"
+        android:layout_marginLeft="60dp"/>
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+       
+        android:layout_marginTop="10dp"
+        android:text="SUBMIT" />
 </LinearLayout>
