--- a/app/src/main/res/layout/activity_register_main.xml
+++ b/app/src/main/res/layout/activity_register_main.xml
@@ -20,7 +20,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/stdbtn"
+        android:id="@+id/regstud"
         android:layout_width="243dp"
         android:layout_height="wrap_content"
 
@@ -29,7 +29,7 @@
         android:text="Student" />
 
     <Button
-        android:id="@+id/facbtn"
+        android:id="@+id/regfac"
         android:layout_width="247dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="70dp"
