--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:textColor="#000000"
         android:textAlignment="center"
         android:textSize="20dp"
+        android:layout_marginTop="20dp"
         android:text="Register"
         android:layout_gravity="center"
          />
