--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="20dp"
+    android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.LoginMainActivity">
+
     <TextView
         android:id="@+id/registertxt"
         android:layout_width="match_parent"
@@ -14,70 +15,67 @@
         android:layout_margin="10dp"
         android:padding="10dp"
         android:text="REGISTER"
-        android:textColor="#000"
-        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <EditText
         android:id="@+id/nametxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name"
-        android:textColor="#828383"
-        />
+        android:textColor="#828383" />
+
     <EditText
         android:id="@+id/usntxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="USN"
+        android:hint="USN"
         android:inputType="number"
-        android:textColor="#828383"
-        />
+        android:textColor="#828383" />
 
     <EditText
         android:id="@+id/qualtxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Qualification"
+        android:hint="Qualification"
         android:inputType="number"
-        android:textColor="#828383"
-        />
+        android:textColor="#828383" />
+
     <EditText
         android:id="@+id/phonetxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#828383"
+        android:hint="Phone"
         android:inputType="phone"
-        android:text="Phone"
-        />
+        android:textColor="#828383" />
 
     <EditText
         android:id="@+id/emailtxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#828383"
+        android:hint="email"
         android:inputType="textEmailAddress"
-        android:text="email"
-        />
+        android:textColor="#828383" />
 
     <EditText
         android:id="@+id/addresstxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Address"
-        android:textColor="#828383"
         android:inputType="textPostalAddress"
-        />
+        android:hint="Address"
+        android:textColor="#828383" />
 
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:textStyle="bold"
-        android:text="SUBMIT" />
+        android:layout_marginTop="10dp"
+        android:text="SUBMIT"
+        android:textStyle="bold" />
 
 </LinearLayout>
