--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.MainActivity"
-    android:layout_margin="100dp">
+    style="@style/AppTheme"
+    >
 
     <Button
         android:id="@+id/loginbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:padding="10dp"
-        android:textColor="#000000"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textStyle="bold"
+        android:background="#008080"
+        android:textColor="#fafafa"
+        android:width="140dp"
         android:textAlignment="center"
+      android:layout_marginTop="170dp"
         android:textSize="20dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+
+        />
 
     <Button
         android:id="@+id/regbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textColor="#000000"
+        android:fontFamily="sans-serif-smallcaps"
+        android:width="140dp"
+        android:textStyle="bold"
+        android:background="#008080"
+        android:textColor="#fafafa"
         android:textAlignment="center"
+        android:layout_marginTop="10dp"
         android:textSize="20dp"
-        android:layout_marginTop="20dp"
         android:text="Register"
         android:layout_gravity="center"
          />
