--- a/app/src/main/res/layout/activity_register_main.xml
+++ b/app/src/main/res/layout/activity_register_main.xml
@@ -10,30 +10,42 @@
     <TextView
         android:id="@+id/regtitle"
         android:layout_width="292dp"
-        android:layout_height="47dp"
-        android:layout_marginLeft="56dp"
+        android:layout_height="95dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Student/Faculty Registration "
         android:textAlignment="center"
-        android:textSize="20dp"
-
+        android:textColor="#424242"
+        android:textSize="30sp"
+        android:layout_gravity="center"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/regstud"
+        android:layout_gravity="center"
         android:layout_width="243dp"
         android:layout_height="wrap_content"
-
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="80dp"
-        android:text="Student" />
+        android:layout_marginTop="50dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textStyle="bold"
+        android:background="#008080"
+        android:textColor="#fafafa"
+        android:textSize="20dp"
+        android:text="Student"
+        android:textAlignment="center"
+        />
 
     <Button
         android:id="@+id/regfac"
         android:layout_width="247dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="80dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textStyle="bold"
+        android:background="#008080"
+        android:textColor="#fafafa"
+        android:textSize="20dp"
         android:text="Faculty" />
 
 </LinearLayout>
