--- a/app/src/main/res/layout/activity_register_main.xml
+++ b/app/src/main/res/layout/activity_register_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
-        android:background="#008080"
+        android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
         android:text="Student"
@@ -43,7 +43,7 @@
         android:layout_marginTop="80dp"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
-        android:background="#008080"
+        android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
         android:text="Faculty" />
