--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,14 @@
         android:text="Login"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
-        android:background="#008080"
+
         android:textColor="#fafafa"
-        android:width="140dp"
+        android:width="190dp"
         android:textAlignment="center"
       android:layout_marginTop="170dp"
         android:textSize="20dp"
         android:layout_gravity="center"
-
+        android:background="@drawable/button"
         />
 
     <Button
@@ -31,9 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
-        android:width="140dp"
+        android:width="190dp"
         android:textStyle="bold"
-        android:background="#008080"
+        android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
