--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -92,9 +92,9 @@
         android:textStyle="bold"
         android:text="SUBMIT"
         android:fontFamily="sans-serif-smallcaps"
-        android:background="#008080"
+        android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
-        android:width="120dp"/>
+        android:width="250dp"/>
 
 </LinearLayout>
