--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="20dp"
+    android:layout_margin="10dp"
+    android:scrollbars="none"
     tools:context="com.example.saipr.final_year_proj.StudentRegisterActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
     <TextView
         android:id="@+id/registertxt"
         android:layout_width="match_parent"
@@ -96,5 +101,5 @@
         android:textColor="#fafafa"
         android:textSize="20dp"
         android:width="250dp"/>
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
