radio btns added to login page

--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -25,37 +25,62 @@
         android:id="@+id/usn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_margin="20dp"
         android:hint="Enter Your Username "
-        android:textColor="#828383"
-    />
+        android:inputType="textPersonName"
+        android:textColor="#828383" />
 
     <EditText
         android:id="@+id/pw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Enter Your Password"
-        android:layout_margin="20dp"
-        android:textColor="#828383"
-        />
+        android:inputType="textPassword"
+        android:textColor="#828383" />
+
+    <RadioGroup
+        android:id="@+id/rglog"
+        android:layout_width="match_parent"
+        android:layout_height="115dp">
+
+        <RadioButton
+            android:id="@+id/rstd"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginStart="10dp"
+            android:checked="false"
+            android:onClick="rbtnclick"
+            android:text="Student"
+            android:textSize="20dp"/>
+
+        <RadioButton
+            android:id="@+id/rfac"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginStart="10dp"
+            android:checked="false"
+            android:onClick="rbtnclick"
+            android:text="Faculty"
+            android:textSize="20dp"/>
+
+    </RadioGroup>
+
 
     <Button
         android:id="@+id/plogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SUBMIT"
-        android:layout_margin="40dp"
-        android:textAlignment="center"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textStyle="bold"
+        android:layout_margin="30dp"
         android:background="@drawable/button"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="SUBMIT"
+        android:textAlignment="center"
         android:textColor="#fafafa"
         android:textSize="20dp"
-        />
+        android:textStyle="bold" />
 
 
 </LinearLayout>
