--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -27,66 +27,115 @@
         android:textSize="30sp"
         />
 
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
     <EditText
-        android:id="@+id/nametxt"
+        android:id="@+id/fnametxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name"
+        android:hint="First Name"
+        android:width="160dp"
         android:inputType="textPersonName"
         android:textColor="#828383"/>
+
     <EditText
-        android:id="@+id/usntxt"
+        android:id="@+id/lnametxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="USN"
-        android:inputType="text"
-        android:textColor="#828383" />
+        android:hint="Last Name"
+        android:width="160dp"
+        android:inputType="textPersonName"
+        android:textColor="#828383"/>
 
+
+
+</LinearLayout>
+
+        <EditText
+            android:id="@+id/usntxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="USN"
+            android:width="160dp"
+            android:inputType="text"
+            android:textColor="#828383" />
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Spinner
         android:id="@+id/qual_drop"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="36dp"
         android:dropDownWidth="200dp"
-        android:prompt="@string/spinner_title"
+        android:prompt="@string/spinner_title"/>
+        <EditText
+            android:id="@+id/dob"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="date"
+            android:hint="DOB"/>
 
         />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/dob"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        android:hint="Date Of Birth"/>
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:id="@+id/rgrp">
-    <RadioButton
-        android:id="@+id/male"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="rbclick"
-        android:checked="false"
-        android:text="MALE" />
 
-    <RadioButton
-        android:id="@+id/female"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        android:onClick="rbclick"
-        android:text="FEMALE" />
+
+        <RadioButton
+            android:id="@+id/male"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="rbclick"
+            android:checked="false"
+            android:text="MALE" />
+
+        <RadioButton
+            android:id="@+id/female"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:onClick="rbclick"
+            android:text="FEMALE" />
     </RadioGroup>
+</LinearLayout>
 
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="horizontal">
     <EditText
         android:id="@+id/doj"
-        android:layout_width="match_parent"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Date Of Joining"
         android:inputType="date" />
-
+    <EditText
+        android:id="@+id/phonetxt"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:hint="Phone"
+        android:inputType="phone"
+        android:textColor="#828383" />
+  </LinearLayout>
     <EditText
         android:id="@+id/emailtxt"
         android:layout_width="match_parent"
@@ -103,17 +152,9 @@
         android:textColor="#828383" />
 
     <EditText
-        android:id="@+id/phonetxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone"
-        android:inputType="phone"
-        android:textColor="#828383" />
-
-    <EditText
         android:id="@+id/pass"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
