--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -117,25 +117,17 @@
     </RadioGroup>
 </LinearLayout>
 
-  <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="horizontal">
-    <EditText
-        android:id="@+id/doj"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Date Of Joining"
-        android:inputType="date" />
+
+
+
     <EditText
         android:id="@+id/phonetxt"
-        android:layout_width="260dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Phone"
         android:inputType="phone"
         android:textColor="#828383" />
-  </LinearLayout>
+
     <EditText
         android:id="@+id/emailtxt"
         android:layout_width="match_parent"
