--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -24,93 +24,120 @@
         android:textColor="#000"
         android:textSize="30sp" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/fnametxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="First Name"
+                android:width="160dp"
+                android:inputType="textPersonName"
+                android:textColor="#828383"/>
 
-    <EditText
-        android:id="@+id/nametxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        android:textColor="#828383"
-        />
+            <EditText
+                android:id="@+id/lnametxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Last Name"
+                android:width="160dp"
+                android:inputType="textPersonName"
+                android:textColor="#828383"/>
 
 
+
+        </LinearLayout>
         <EditText
             android:id="@+id/usntxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="USN"
+            android:width="160dp"
             android:inputType="text"
             android:textColor="#828383" />
 
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Spinner
+                android:id="@+id/branch"
+                android:layout_width="200dp"
+                android:layout_height="36dp"
+                android:dropDownWidth="200dp"
+                android:prompt="@string/spinner_title"/>
+            <EditText
+                android:id="@+id/dob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="date"
+                android:hint="DOB"/>
+
+            />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:id="@+id/rgrp">
+
+
+                <RadioButton
+                    android:id="@+id/male"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:onClick="rbclick"
+                    android:checked="true"
+                    android:text="MALE" />
+
+                <RadioButton
+                    android:id="@+id/female"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:onClick="rbclick"
+                    android:text="FEMALE" />
+            </RadioGroup>
+        </LinearLayout>
+
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
         <EditText
-            android:id="@+id/stdsem"
-            android:layout_width="match_parent"
+            android:id="@+id/phonetxt"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number"
-            android:hint="Semester"/>
-
-        <Spinner
-            android:id="@+id/branch"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:prompt="@string/sp_title"
-            android:dropDownWidth="200dp"
-            />
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/stdrgrp">
-        <RadioButton
-            android:id="@+id/stdmale"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MALE"
-            android:onClick="rbclick"
-            android:checked="false"
-            />
-
-        <RadioButton
-            android:id="@+id/stdfemale"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="FEMALE"
-            android:onClick="rbclick"
-            android:checked="false"/>
-        </RadioGroup>
-
+            android:hint="Phone"
+            android:inputType="phone"
+            android:textColor="#828383" />
+    <EditText
+        android:id="@+id/studsem"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:hint="Sem"
+        android:inputType="number"
+        android:textColor="#828383" />
+</LinearLayout>
         <EditText
             android:id="@+id/emailtxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:textColor="#828383" />
-
-        <EditText
-            android:id="@+id/stdpwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:hint="Enter password"/>
-
-        <EditText
-            android:id="@+id/stdcpwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:hint="Confirm password"/>
-
-        <EditText
-            android:id="@+id/phonetxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Phone"
-            android:inputType="phone"
-            android:textColor="#828383" />
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/addresstxt"
@@ -121,26 +148,36 @@
             android:textColor="#828383" />
 
         <EditText
-        android:id="@+id/dobtxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Date Of Birth"
-        android:textColor="#828383"
-        android:inputType="date"/>
+            android:id="@+id/stdpwd"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/stdcpwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
 
 
         <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:text="SUBMIT"
-        android:fontFamily="sans-serif-smallcaps"
-        android:background="@drawable/button"
-        android:textColor="#fafafa"
-        android:textSize="20dp"
-        android:width="250dp"/>
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="SUBMIT"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
+            android:background="@drawable/button"
+            android:textColor="#fafafa"
+            android:textSize="20dp"
+            android:width="250dp"/>
     </LinearLayout>
 </ScrollView>
+
+
