register hadling fac

--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -110,7 +110,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="rbclick"
-            android:checked="false"
+            android:checked="true"
             android:text="MALE" />
 
         <RadioButton
